OSINT Flight Geolocation blogpost

--- a/css/custom.css
+++ b/css/custom.css
@@ -130,7 +130,7 @@ a {
 }
 
 .imgSize {
-  max-width: 80%;
+  max-width: 70%;
 }
 
 .logoFlag {
@@ -180,4 +180,14 @@ h2 {
 
 p {
  text-align: justify;
+}
+
+/* for image caption */
+.imageCaption {
+  font-style: normal;
+  display: inherit;
+  text-align: center;
+  font-size: 90%;
+  margin-top: -1.5em;
+  margin-bottom: 2em;
 }
